# GenAI

./: .gitignore  README.MD  ddpm_forward.py  project.ipynb  pyproject.toml  requirements.txt  train_ddpm.py  unet_model.py
slides-ddpm/: package-lock.json  package.json  tailwind.config.ts
slides-ddpm/app/: globals.css  layout.tsx
slides-ddpm/app/slides/[id]/: page.tsx
slides-ddpm/components/: AnimatedBar.tsx  AnimatedCounter.tsx  FormulaBlock.tsx  ImageGrid.tsx  NeonCard.tsx  ParticleBackground.tsx  SlideContainer.tsx  UNetDiagram.tsx
slides-ddpm/lib/: slides-config.ts
slides-ddpm/lib/slides/: 01-intro.tsx  02-motivation.tsx  03-overview.tsx  04-forward.tsx  05-unet.tsx  06-reverse.tsx  07-training.tsx  08-viz-forward.tsx  09-viz-reverse.tsx  10-results.tsx  11-comparison.tsx  12-merci.tsx
